test/fail/type-error-imports.mo
import _ "empty-module";
import {} "empty-module";

import (_, _) = "empty-module";
